--- a/package.json
+++ b/package.json
@@ -2,15 +2,32 @@
   "name": "inventanalytics",
   "version": "1.0.0",
   "description": "invent analytics developer case",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "test": "jest"
   },
   "author": "Bilal İŞLER",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
-    "mysql2": "^3.11.0"
+    "knex": "^3.1.0",
+    "module-alias": "^2.2.3",
+    "mysql2": "^3.11.0",
+    "objection": "^3.1.4",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "@testcontainers/mysql": "^10.11.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "testcontainers": "^10.11.0"
+  },
+  "_moduleAliases": {
+    "@": "."
   }
 }
