--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     ports:
       - 3000:3000
+    environment:
+      DB_HOST: host.docker.internal
     networks:
       - library-network
     depends_on:
